--- a/Javascript Tooling ES6/aula02/package.json
+++ b/Javascript Tooling ES6/aula02/package.json
@@ -13,9 +13,11 @@
     "@babel/core": "^7.23.9",
     "@babel/preset-env": "^7.23.9",
     "babel-loader": "^9.1.3",
-    "core-js": "^2.6.12",
-    "regenerator-runtime": "^0.14.1",
     "webpack": "^5.90.0",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "core-js": "^3.35.1",
+    "regenerator-runtime": "^0.14.1"
   }
 }
