updating the new exercises

--- a/modelo-webpack/package.json
+++ b/modelo-webpack/package.json
@@ -18,6 +18,8 @@
   },
   "dependencies": {
     "core-js": "^3.35.1",
-    "regenerator-runtime": "^0.14.1"
+    "css-loader": "^6.10.0",
+    "regenerator-runtime": "^0.14.1",
+    "style-loader": "^3.3.4"
   }
 }
