--- a/node/aula14/package.json
+++ b/node/aula14/package.json
@@ -12,19 +12,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ejs": "^3.1.9",
-    "express": "^4.18.2",
     "core-js": "^3.35.1",
     "css-loader": "^6.10.0",
+    "dotenv": "^16.4.5",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "mongoose": "^8.1.3",
     "regenerator-runtime": "^0.14.1",
     "style-loader": "^3.3.4"
   },
   "devDependencies": {
-    "nodemon": "^3.0.3",
     "@babel/cli": "^7.23.9",
     "@babel/core": "^7.23.9",
     "@babel/preset-env": "^7.23.9",
     "babel-loader": "^9.1.3",
+    "nodemon": "^3.0.3",
     "webpack": "^5.90.0",
     "webpack-cli": "^5.1.4"
   }
