--- a/node/aula15/package.json
+++ b/node/aula15/package.json
@@ -12,11 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
     "core-js": "^3.35.1",
     "css-loader": "^6.10.0",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.18.0",
     "mongoose": "^8.2.2",
     "regenerator-runtime": "^0.14.1",
     "style-loader": "^3.3.4"
@@ -26,7 +29,7 @@
     "@babel/core": "^7.23.9",
     "@babel/preset-env": "^7.23.9",
     "babel-loader": "^9.1.3",
-    "nodemon": "^3.0.3",
+    "nodemon": "^3.1.0",
     "webpack": "^5.90.0",
     "webpack-cli": "^5.1.4"
   }
