--- a/projetoagenda/package.json
+++ b/projetoagenda/package.json
@@ -1,7 +1,7 @@
 {
   "name": "aula14",
   "version": "1.0.0",
-  "description": "",
+  "description": "this is server start and db connection",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -23,6 +23,7 @@
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "helmet": "^7.1.0",
+    "mongodb": "^6.5.0",
     "mongoose": "^8.2.2",
     "regenerator-runtime": "^0.14.1",
     "style-loader": "^3.3.4"
