--- a/projetoagenda/package.json
+++ b/projetoagenda/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aula14",
+  "name": "projetoagenda",
   "version": "1.0.0",
   "description": "this is server start and db connection",
   "main": "server.js",
@@ -34,7 +34,7 @@
     "@babel/preset-env": "^7.23.9",
     "babel-loader": "^9.1.3",
     "nodemon": "^3.1.0",
-    "webpack": "^5.90.0",
+    "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
   }
 }
